--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next/third-parties": "^15.0.3",
     "@openpanel/nextjs": "^1.0.6",
     "@phosphor-icons/react": "^2.1.7",
+    "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/typography": "^0.5.15",
@@ -34,6 +35,7 @@
     "feed": "^4.2.2",
     "google": "link:@next/third-parties/google",
     "gray-matter": "^4.0.3",
+    "immer": "^10.1.1",
     "lucide-react": "^0.460.0",
     "next": "^14.2.18",
     "next-mdx-remote": "^5.0.0",
@@ -48,7 +50,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss": "^3.4.15",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "eslint": "^8.56.0",
