feat: add clarity

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,7 @@ OPENPANEL_PROJECT_ID="***"
 
 # Google Analytics (https://analytics.google.com)
 NEXT_PUBLIC_GOOGLE_ANALYTICS_ID="***"
+NEXT_PUBLIC_CLARITY_ID="***"
 
 # Plausible Analytics (https://plausible.io)
 NEXT_PUBLIC_PLAUSIBLE_URL="***"
