--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-dom": "^18.3.1",
     "@types/webpack-env": "^1.18.5",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "^10.4.20",
     "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.0",
