feat: integrate posthog and disable openpanel

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,10 @@ OPENPANEL_PROJECT_ID="***"
 NEXT_PUBLIC_GOOGLE_ANALYTICS_ID="***"
 NEXT_PUBLIC_CLARITY_ID="***"
 
+# PostHog Analytics
+NEXT_PUBLIC_POSTHOG_KEY=phc_your_actual_api_key_here
+NEXT_PUBLIC_POSTHOG_HOST=https://us.i.posthog.com
+
 # Plausible Analytics (https://plausible.io)
 NEXT_PUBLIC_PLAUSIBLE_URL="***"
 NEXT_PUBLIC_PLAUSIBLE_SRC="****"
