--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.2.1",
     "postcss": "^8.4.49",
+    "posthog-js": "^1.302.2",
     "prism-react-renderer": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
